; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_wildmatch.c_test_core_wildmatch__case_sensitivity.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_wildmatch.c_test_core_wildmatch__case_sensitivity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"[A-Z]\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"A\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"[a-z]\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"[[:upper:]]\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"[[:lower:]]\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"[B-Za]\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"[B-a]\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"z\00", align 1
@.str.9 = private unnamed_addr constant [6 x i8] c"[Z-y]\00", align 1
@.str.10 = private unnamed_addr constant [2 x i8] c"Z\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_wildmatch__case_sensitivity() #0 {
  %1 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %2 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %3 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %4 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %5 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %6 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %7 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %8 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %9 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %10 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %11 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %12 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %13 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0), i32 0, i32 1, i32 0, i32 1)
  %14 = call i32 @assert_matches(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  ret void
}

declare dso_local i32 @assert_matches(i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
